# pymmcore-gui

./: .cruft.json  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUITING.md  CONTRIBUTING.md  LICENSE  MDA_POSITION_MAP_DESIGN.md  PRIVACY.md  README.md  TODO.md  debug_memory_leak.py  example.py  justfile  launch.vbs  mmgui.spec  pyproject.toml  simple_debug.py  test_debug_refs.py  x.py  y.py  z.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: bundle.yml  ci.yml
app/: icon.icns  mmgui.spec
app/hooks/: hook-cmap.py  hook-debugpy.py  hook-ndv.py  hook-tensorstore.py  hook-vispy.py
docs/: index.md
examples/: gui.py
hooks/: hook-pymmcore_widgets.py  hook-superqt.py  hook-vispy.py
scripts/: mmgui.spec
src/micromanager_gui/: __init__.py  __main__.py  _core_link.py  _init_system_config.py  _main_window.py  _toolbar.py  _util.py
src/micromanager_gui/_menubar/: _menubar.py
src/micromanager_gui/_readers/: _ome_zarr_reader.py  _tensorstore_zarr_reader.py
src/micromanager_gui/_toolbar/: _shutters_toolbar.py  _snap_live.py
src/micromanager_gui/_widgets/: _camera_roi.py  _config_wizard.py  _console.py  _group_and_preset.py  _mda_widget.py  _mm_console.py  _pixel_configurations.py  _previerw_ndv.py  _preview.py  _shutters_toolbar.py  _snap_and_live.py  _snap_live_buttons.py  _stage_control.py
src/micromanager_gui/_widgets/_mda/: _mda_viewer.py  _sliders.py
src/micromanager_gui/_widgets/_mda_widget/: __init__.py  _core_mda.py  _mda_widget.py
src/micromanager_gui/_widgets/_stack_viewer/: _indexing.py  _mda_viewer.py
src/micromanager_gui/_widgets/_stack_viewer/_backends/: __init__.py
src/micromanager_gui/_widgets/_viewers/: __init__.py
src/micromanager_gui/_widgets/_viewers/_mda_viewer/: _data_wrappers.py  _mda_save_button.py  _mda_viewer.py
src/micromanager_gui/_widgets/_viewers/_preview_viewer/: _preview_save_button.py  _preview_viewer.py
src/micromanager_gui/_writers/: _tensorstore_zarr.py
src/micromanager_gui/readers/: __init__.py  _ome_zarr_reader.py  _tensorstore_zarr_reader.py
src/pymmcore_gui/: __init__.py  __main__.py  _ads_style.py  _app.py  _array_viewer.py  _cli.py  _core_link.py  _data_wrappers.py  _io.py  _main_window.py  _main_window3.py  _midi.py  _ndv_viewers.py  _ngff_wrapper.py  _notification_manager.py  _preview_viewer.py  _sentry.py  _settings.py  _sim_sample.py  _utils.py  settings.py
src/pymmcore_gui/_layout/: __init__.py  _activity_bar.py  _enums.py  _navigation_bar.py  _pane_container.py  _splitter_utils.py  _workbench.py
src/pymmcore_gui/_menubar/: _menubar.py
src/pymmcore_gui/_qt/: Qlementine.py  Qlementine.pyi  QtAds.py  QtCore.py  QtGui.py  QtOpenGLWidgets.py  QtWidgets.py  __init__.py
src/pymmcore_gui/_qt/Qlementine/: __init__.pyi  utils.pyi
src/pymmcore_gui/_stubs/: __init__.py  pyqtProperty.pyi
src/pymmcore_gui/_toolbar/: _snap_live.py
src/pymmcore_gui/_widgets/: _install_widget.py  _menubar.py  _shutters_toolbar.py  _snap_live.py
src/pymmcore_gui/_widgets/_mda_widget/: __init__.py  _mda_widget.py
src/pymmcore_gui/_widgets/_viewers/_mda_viewer/: _data_wrappers.py  _mda_save_button.py  _mda_viewer.py
src/pymmcore_gui/_widgets/_viewers/_preview_viewer/: __init__.py  _preview_save_button.py  _preview_viewer.py
src/pymmcore_gui/_writers/: __init__.py  _tensorstore_zarr.py
src/pymmcore_gui/actions/: __init__.py  _action_info.py  _core_actions.py  _core_functions.py  _core_qaction.py  core_actions.py  help_actions.py  widget_actions.py
src/pymmcore_gui/core_link/: __init__.py  _core_link.py  _shared_handler.py  _viewers_core_link.py  _viewers_core_link_v2.py
src/pymmcore_gui/data_wrappers/: __init__.py  _mm_tensorstore_wrapper.py  _mm_wrappers.py
src/pymmcore_gui/io/: __init__.py
src/pymmcore_gui/io/_writers/: __init__.py  _tensorstore_zarr.py
src/pymmcore_gui/io/readers/: __init__.py
src/pymmcore_gui/llm/: __init__.py  _chat_backend.py  _chat_widget.py  _fallback_widget.py  _local_backend.py  _mcp_tools.py  _ollama_backend.py  _system_prompt.py  _tools.py  _voice.py
src/pymmcore_gui/readers/: _ome_zarr_reader.py  _tensorstore_zarr_reader.py
src/pymmcore_gui/widgets/: _about_widget.py  _chip_dxf.py  _code_syntax_highlight.py  _configure_widget.py  _core_status_bar.py  _dithered_gradient.py  _drop_overlay.py  _exception_log.py  _exposure.py  _image_preview.py  _joystick.py  _mda_position_map.py  _mda_stage_explorer.py  _mda_widget.py  _measurement_table.py  _menubar.py  _mm_console.py  _ndv.py  _notifications.py  _pixel_config.py  _preview_viewer.py  _pygfx_image.py  _snap_live.py  _snap_live_buttons.py  _stage_control.py  _stage_control_legacy.py  _stage_explorer.py  _toolbars.py
src/pymmcore_gui/widgets/_mda_widget/: __init__.py  _mda_widget.py  _save_widget.py
src/pymmcore_gui/widgets/_viewers/_mda_viewer/: _data_wrappers.py  _mda_viewer.py
src/pymmcore_gui/widgets/_viewers/_preview_viewer/: _preview_save_button.py  _preview_viewer.py
src/pymmcore_gui/widgets/image_preview/: __init__.py  _ndv_preview.py  _preview_base.py  _pygfx_image.py
tests/: conftest.py  test_actions.py  test_app.py  test_array_viewer.py  test_bundle.py  test_chip_dxf.py  test_cli.py  test_gui.py  test_main_window.py  test_main_window3.py  test_mda_position_map.py  test_mda_stage_explorer.py  test_mda_viewer.py  test_memory.py  test_micromanager_gui.py  test_ndv_viewers.py  test_notification_manager.py  test_readers_writers.py  test_save_widget.py  test_settings.py  test_stack_viewer.py  test_stage_explorer.py  test_stage_widget.py  test_widgets.py
